tests/paczka1/fuzzy1/16956904.err
Error in line 1: ycSONKUAj S758 63,8
Error in line 11: o4hTb S574 16,4
Error in line 12: o4hTb S833 4,5
Error in line 14: 7DGf9ca0 S758 79,9
Error in line 28: bdqu S758 -1,3
Error in line 7: bdqu S758 74,9
